--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "area-data",
-  "version": "5.0.6",
-  "author": "pomysky@gmail.com",
+  "name": "area-data-tt",
+  "version": "1.0.0",
+  "author": "canguliu512@gmail.com",
   "description": "中国省、市、区数据(含港澳台)",
   "license": "MIT",
   "main": "./data.js",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/dwqs/area-data.git"
+    "url": "https://github.com/zhiliang-dev/area-data-tt"
   },
   "bugs": {
-    "url": "https://github.com/dwqs/area-data/issues"
+    "url": "https://github.com/zhiliang-dev/area-data-tt/issues"
   },
   "files": [
     "data.js",
